--- a/CalorieCounter/CalorieCounter.csproj
+++ b/CalorieCounter/CalorieCounter.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="foodbackground.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="foodbackground.jpg" />
   </ItemGroup>
 
 </Project>
